<resources>
    <string name="app_name">General Knowledge</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startButton">START</string>
    <string name="aboutButton">ABOUT</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="buttonLevel1">বাংলাদেশ</string>
    <string name="buttonLevel2">আন্তর্জাতিক</string>
    <string name="buttonLevel3">বিবিধ</string>
    <string name="title_activity_ban_first">BanFirst</string>
    <string name="title_activity_wor_first">WorFirst</string>
    <string name="worFirNext">NEXT</string>
    <string name="worFirBack">BACK</string>
    <string name="title_activity_other_first">OtherFirst</string>
    <string name="banFirstBack">BACK</string>
    <string name="banFirstNext">NEXT</string>
    <string name="title_activity_ban_second">BanSecond</string>
    <string name="banSecBack">BACK</string>
    <string name="banSecNext">NEXT</string>
    <string name="title_activity_ban_third">BanThird</string>
    <string name="title_activity_ban_fourth">BanFourth</string>
    <string name="banFourthBack">BACK</string>
    <string name="banFourthNext">NEXT</string>
    <string name="title_activity_ban_fifth">BanFifth</string>
    <string name="banFifthBack">BACK</string>
    <string name="banFifthNext">NEXT</string>
    <string name="title_activity_ban_sixth">BanSixth</string>
    <string name="title_activity_ban_seventh">BanSeventh</string>
    <string name="banSeventhNext">NEXT</string>
    <string name="banSeventhBack">BACK</string>
    <string name="title_activity_ban_eighth">BanEighth</string>
    <string name="banEighthBack">BACK</string>
    <string name="banEighthNext">NEXT</string>
    <string name="title_activity_ban_ninth">BanNinth</string>
    <string name="banNinthBack">BACK</string>
    <string name="banNinthNext">NEXT</string>
    <string name="title_activity_ban_tenth">BanTenth</string>
    <string name="banTenthBack">BACK</string>
    <string name="banTenthNext">NEXT</string>
    <string name="banSixthBack">BACK</string>
    <string name="banSixthNext">NEXT</string>
    <string name="banThirdNext">NEXT</string>
    <string name="banThirdBack">BACK</string>
    <string name="title_activity_wor_sec">WorSec</string>
    <string name="worSecNext">NEXT</string>
    <string name="worSecBack">BACK</string>
    <string name="title_activity_wor_third">WorThird</string>
    <string name="worThrNext">NEXT</string>
    <string name="worThrBack">BACK</string>
    <string name="title_activity_wor_fourth">WorFourth</string>
    <string name="worFrtNext">NEXT</string>
    <string name="worFrtBack">BACK</string>
    <string name="title_activity_wor_fifth">WorFifth</string>
    <string name="nextWorFif">NEXT</string>
    <string name="backWorFif">BACK</string>
    <string name="title_activity_wor_seventh">WorSeventh</string>
    <string name="nextWorSev">NEXT</string>
    <string name="backWorSev">BACK</string>
    <string name="nextWorSix">NEXT</string>
    <string name="backWorSix">BACK</string>
    <string name="title_activity_wor_sixth">WorSixth</string>
    <string name="title_activity_wor_eighth">WorEighth</string>
    <string name="nextWorEgt">NEXT</string>
    <string name="backWorEgt">BACK</string>
    <string name="title_activity_wor_tenth">WorTenth</string>
    <string name="nextWorTen">NEXT</string>
    <string name="backWorTen">BACK</string>
    <string name="title_activity_wor_ninth">WorNinth</string>
    <string name="nextWorNin">NEXT</string>
    <string name="backWorNin">BACK</string>
    <string name="nextOthOne">NEXT</string>
    <string name="backOthOne">BACK</string>
    <string name="title_activity_other_sec">OtherSec</string>
    <string name="nextOthTwo">NEXT</string>
    <string name="backOthTwo">BACK</string>
    <string name="title_activity_other_thi">OtherThi</string>
    <string name="nextOthThr">NEXT</string>
    <string name="backOthThr">BACK</string>
    <string name="title_activity_other_fourth">OtherFourth</string>
    <string name="nextOthFor">NEXT</string>
    <string name="backOthFor">BACK</string>
    <string name="title_activity_other_fif">OtherFif</string>
    <string name="nextOthFif">NEXT</string>
    <string name="backOthFif">BACK</string>
    <string name="title_activity_other_sixth">OtherSixth</string>
    <string name="title_activity_other_seventh">OtherSeventh</string>
    <string name="title_activity_other_eighth">OtherEighth</string>
    <string name="title_activity_other_ninth">OtherNinth</string>
    <string name="title_activity_other_tenth">OtherTenth</string>
    <string name="backOthSix">BACK</string>
    <string name="nextOthSix">NEXT</string>
    <string name="backOthSev">BACK</string>
    <string name="nextOthSev">NEXT</string>
    <string name="backOthEgt">BACK</string>
    <string name="nextOthEgt">NEXT</string>
    <string name="backOthNin">BACK</string>
    <string name="nextOthNin">NEXT</string>
    <string name="backOthTen">BACK</string>
    <string name="ssentence1">General Knowledge</string>
    <string name="sentence2">For BCS Examinees</string>
    <string name="sentence3">BY</string>
    <string name="name1">Summit Haque</string>
    <string name="name2">MD. Nowshad Hasan</string>

</resources>
