<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.summithaque.generalknowledge.MenuActivity"
    android:background="@drawable/back1">


    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLevel1"
        android:id="@+id/buttonLevel1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:textStyle="bold|italic"
        android:textColor="#123456"
        android:background="#cebcb6"
        android:textSize="20sp"
        android:onClick="banglaMethod" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLevel2"
        android:id="@+id/buttonLevel2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#123456"
        android:background="#cebcb6"
        android:textSize="20sp"
        android:onClick="worldMethod" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLevel3"
        android:id="@+id/buttonLevel3"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/buttonLevel2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#123456"
        android:background="#cebcb6"
        android:textSize="20sp"
        android:onClick="otherMethod" />
</RelativeLayout>
